--- a/.infra/pipeline/pipeline.yaml
+++ b/.infra/pipeline/pipeline.yaml
@@ -7,7 +7,7 @@ spec:
   - name: git-clone
     params:
     - name: repo-url
-      value: https://github.com/anilabhabaral/hello-cicd-argocd-jboss.git
+      value: https://github.com/rrbanda/hello-cicd-argocd-jboss.git
     taskRef:
       kind: Task
       name: git-clone
@@ -35,7 +35,7 @@ spec:
     - name: dockerfile-path
       value: Dockerfile
     - name: internal-registry
-      value: default-route-openshift-image-registry.apps.cndsno3.cee.ral3.lab.eng.rdu2.redhat.com
+      value: default-route-openshift-image-registry.apps.cluster-f4mdr.sandbox586.opentlc.com
     - name: namespace
       value: testpipeline
     - name: buildah-image
