--- a/.infra/tasks/image-build-push.yaml
+++ b/.infra/tasks/image-build-push.yaml
@@ -15,7 +15,7 @@ spec:
       default: Dockerfile
       type: string
     - name: internal-registry
-      description: URL of the internal Openshift Registry
+      description: URL of the internal OpenShift Registry
       default: default-route-openshift-image-registry.apps.cluster-f4mdr.sandbox586.opentlc.com
       type: string
     - name: namespace
@@ -28,6 +28,12 @@ spec:
       type: string
       
   steps:
+    - name: login-to-internal-registry
+      image: $(params.buildah-image)
+      script: |
+        # Log in to the OpenShift internal registry using hardcoded credentials
+        podman login -u admin -p MTY2MzUz $(params.internal-registry)
+        
     - name: build-image-and-push-to-internal-registry
       image: $(params.buildah-image)
       workingDir: $(workspaces.source.path)/code
@@ -47,7 +53,6 @@ spec:
           value: $(params.namespace)
       script: |
         # Setting the VFS Storage Driver allows us to run Buildah in a non-privileged container
-        # More information found here: https://docs.docker.com/storage/storagedriver/vfs-driver/
         BUILDAH_OPTS="--storage-driver=vfs"
         buildah ${BUILDAH_OPTS} bud -f ${DOCKERFILE_PATH} -t ${IMAGE_NAME}
         
@@ -59,5 +64,5 @@ spec:
         buildah ${BUILDAH_OPTS} tag ${IMAGE_NAME} ${INTERNAL_REGISTRY}/${NAMESPACE}/${IMAGE_NAME}:latest
         buildah ${BUILDAH_OPTS} push --tls-verify=false --cert-dir="/tekton-custom-certs" ${INTERNAL_REGISTRY}/${NAMESPACE}/${IMAGE_NAME}:latest
   workspaces:
-    - description: Persistance Storage between Pods.
+    - description: Persistence Storage between Pods.
       name: source
