--- a/.infra/tasks/image-build-push.yaml
+++ b/.infra/tasks/image-build-push.yaml
@@ -32,7 +32,7 @@ spec:
       image: $(params.buildah-image)
       script: |
         # Log in to the OpenShift internal registry using buildah
-        buildah login --tls-verify=false -u admin -p MTY2MzUz $(params.internal-registry)
+        buildah login --tls-verify=false -u admin -p sha256~0pHKY4Y7EJzVWjzXzWam84ndAcD1IJOxPPp3hVXvkU4 $(params.internal-registry)
         
     - name: build-image-and-push-to-internal-registry
       image: $(params.buildah-image)
