--- a/.infra/tasks/image-build-push.yaml
+++ b/.infra/tasks/image-build-push.yaml
@@ -16,7 +16,7 @@ spec:
       type: string
     - name: internal-registry
       description: URL of the internal Openshift Registry
-      default: image-registry-openshift-image-registry.apps.cluster-f4mdr.sandbox586.opentlc.com
+      default: default-route-openshift-image-registry.apps.cluster-f4mdr.sandbox586.opentlc.com
       type: string
     - name: namespace
       description: Namespace where the image will be pushed
@@ -57,11 +57,11 @@ spec:
         
         # Push Tagged Version with Commit SHA
         podman tag ${IMAGE_NAME} ${INTERNAL_REGISTRY}/${NAMESPACE}/${IMAGE_NAME}:${IMAGE_TAG}
-        podman push --tls-verify=false ${INTERNAL_REGISTRY}/${NAMESPACE}/${IMAGE_NAME}:${IMAGE_TAG}
+        podman push ${INTERNAL_REGISTRY}/${NAMESPACE}/${IMAGE_NAME}:${IMAGE_TAG}
 
         # Push Latest Tag
         podman tag ${IMAGE_NAME} ${INTERNAL_REGISTRY}/${NAMESPACE}/${IMAGE_NAME}:latest
-        podman push --tls-verify=false ${INTERNAL_REGISTRY}/${NAMESPACE}/${IMAGE_NAME}:latest
+        podman push ${INTERNAL_REGISTRY}/${NAMESPACE}/${IMAGE_NAME}:latest
   workspaces:
     - description: Persistance Storage between Pods.
       name: source
