--- a/.infra/tasks/image-build-push.yaml
+++ b/.infra/tasks/image-build-push.yaml
@@ -20,7 +20,7 @@ spec:
       type: string
     - name: namespace
       description: Namespace where the image will be pushed
-      default: default
+      default: jboss-pipelines
       type: string
     - name: buildah-image
       description: Buildah Image
