--- a/.infra/pipeline/pipeline.yaml
+++ b/.infra/pipeline/pipeline.yaml
@@ -37,7 +37,7 @@ spec:
     - name: internal-registry
       value: default-route-openshift-image-registry.apps.cluster-f4mdr.sandbox586.opentlc.com
     - name: namespace
-      value: testpipeline
+      value: jboss-pipelines
     - name: buildah-image
       value: quay.io/buildah/stable:v1.17.0
     runAfter:
