--- a/.infra/deployment/deployment.yaml
+++ b/.infra/deployment/deployment.yaml
@@ -16,6 +16,6 @@ spec:
     spec:
       containers:
       - name: jboss
-        image: image-registry.openshift-image-registry.svc:5000/testpipeline/hello:latest
+        image: image-registry.openshift-image-registry.svc:5000/jboss-pipelines/hello:latest
         ports:
         - containerPort: 8080
